updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a graduate from U of M Morris. I majored in printmaking and art history.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Stillwater MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Making music, bicycling, camping, hiking and reading.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Graphic designer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Minneapolis</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I wish to foster a fulfilling and stable career in web development. I hope to employ my knowledge of graphic design and art to with my growing knowledge of coding to create unique web design.</p>
     </section>
 
     <footer id="footer">
